--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,11 +3,11 @@
     <a href="./index.html" class="logo-link">
       <picture>
         <source srcset="/images/logo-desktop.png" media="(min-width: 768px)" />
-        <img src="/images/logo-phone.png" alt="logo-game" class="logo-img" />
+        <img src="/images/logo-phone.png" alt="logo" class="logo-img" />
       </picture>
     </a>
 
-    <button class="burger-menu-btn" type="button">
+    <button class="burger-btn" type="button">
       <svg
         width="36"
         height="36"
@@ -40,25 +40,16 @@
       </button>
       <ul class="nav-list">
         <li class="nav-item">
-          <a href="#home" class="nav-link">Home</a>
+          <a href="#goal" class="nav-link">Goal</a>
         </li>
         <li class="nav-item">
-          <a href="#about" class="nav-link">About the Game</a>
+          <a href="#advantages" class="nav-link">Advantages</a>
         </li>
         <li class="nav-item">
-          <a href="#magical-atmosphere" class="nav-link">Magical Atmosphere</a>
+          <a href="#commissions" class="nav-link">Commissions</a>
         </li>
         <li class="nav-item">
-          <a href="#features" class="nav-link">Features and Benefits</a>
-        </li>
-        <li class="nav-item">
-          <a href="#create-magic" class="nav-link">Ready to Create Magic?</a>
-        </li>
-        <li class="nav-item">
-          <a href="#gallery" class="nav-link">Gallery</a>
-        </li>
-        <li class="nav-item">
-          <a href="#reviews" class="nav-link">Reviews</a>
+          <a href="#testimonials" class="nav-link">Testimonials</a>
         </li>
         <li class="nav-item">
           <a href="#faq" class="nav-link">FAQ</a>
