--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -2,38 +2,36 @@
 @use "./mixins" as *;
 
 body {
-  font-family: $font-family-primary;
-  background-color: #0f6691;
+  font-family: $font-family;
+  background-color: $color-black;
+  color: $color-white;
   font-weight: 400;
-  font-size: 14px;
-  color: $color-text;
+  line-height: 1.4;
+  font-size: 16px;
 }
 .container {
-  width: 320px;
-  padding: 24px 16px;
+  width: 375px;
   margin: 0 auto;
   @include media(desktop) {
-    width: 1200px;
-    padding: 80px 72px;
+    width: 1110px;
   }
 }
 .title {
-  font-family: $font-family-second;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  color: $color-heading;
+  font-family: $second-family;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 1.2;
+  color: $color-white;
   text-align: center;
   @include media(desktop) {
-    font-size: 48px;
+    font-size: 56px;
   }
 }
-.text {
-  font-family: $font-family-primary;
-  font-weight: 500;
-  font-size: 14px;
-  color: $color-text;
-  @include media(desktop) {
-    font-size: 18px;
-  }
-}
+// .text {
+//   font-weight: 400;
+//   font-size: 14px;
+//   color: $color-white;
+//   @include media(desktop) {
+//     font-size: 18px;
+//   }
+// }
