--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,21 +1,22 @@
-$font-family-primary: "Mali", sans-serif;
-$font-family-second: "Piedra", sans-serif;
-$font-family-tertiary: "Inter", sans-serif;
+$font-family: "Inter", sans-serif;
+$second-family: "Oswald", sans-serif;
+$third-family: "Roboto", sans-serif;
 
 // Основні кольори
-$color-primary: #0f6691;
-$color-secondary: #024d55;
+// $color-primary: ;
+$color-primary: #8d43ff;
+// $color-secondary: #8d43ff;
 $color-white: #ffffff;
-$color-black: #000000;
-$color-dark-brown: #342829;
+$color-black: #0d0a0f;
+// $color-gray: #1c1f22;
 
-// Акцентні кольори
-$color-button: #e7c000;
+// // Акцентні кольори
+// $color-button: #e7c000;
 $color-heading: #f3be00;
-$color-pagination: #fb8404;
-$color-text: #fcfcf0;
+// $color-pagination: #fb8404;
+// $color-text: #fcfcf0;
 
-// Допоміжні кольори
-$color-background-accent: #e6dfc5;
-$color-cyan-light: #57e5f9;
-$color-cyan-bright: #a4f9ff;
+// // Допоміжні кольори
+// $color-background-accent: #e6dfc5;
+// $color-cyan-light: #57e5f9;
+// $color-cyan-bright: #a4f9ff;
