--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -9,20 +9,21 @@
 .header-container {
   position: relative;
   width: 300px;
-  padding: 4px 10px;
+  // padding: 4px 10px;
   margin: 0 auto;
-  background-color: $color-primary;
-  border-radius: 12px;
+  // background-color: $color-primary;
+  background-color: transparent;
+  // border-radius: 12px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   @include media(desktop) {
-    border-radius: 45px;
-    width: 1056px;
-    height: 114px;
+    // border-radius: 45px;
+    // width: 1056px;
+    // height: 114px;
     margin: 0 auto;
-    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
-    padding: 4px 24px 4px 30px;
+    // box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.25);
+    // padding: 4px 24px 4px 30px;
   }
 }
 .nav-item {
@@ -38,22 +39,21 @@
   }
 }
 .logo-img {
-  width: 80px;
-  height: 40px;
+  width: 88px;
+  height: 32px;
   @include media(desktop) {
-    width: 209px;
-    height: 106px;
+    width: 192px;
+    height: 40px;
   }
 }
-.burger-menu-btn,
-.burger-menu-btn-close {
+.burger-btn,
+.burger-btn-close {
   width: 36px;
   height: 36px;
   font-size: 40px;
   padding: 0;
   background: none;
   border: none;
-  cursor: pointer;
 
   @include media(desktop) {
     display: none;
@@ -100,23 +100,25 @@
   width: 180px;
   height: 375px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
-  background: $color-cyan-bright;
+  // background: $color-cyan-bright;
   padding-top: 84px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 40px;
   transition: all 350ms ease-in-out;
   z-index: 11;
   // display: none;
   @include media(desktop) {
     position: static;
-    flex-direction: row;
-    height: auto;
-    background: none;
-    box-shadow: none;
-    width: 766px;
-    padding-top: 0px;
+    // flex-direction: row;
+    // height: auto;
+    // background: none;
+    // box-shadow: none;
+    // width: 766px;
+    // padding-top: 0px;
+    gap: 40px;
   }
 }
 .nav-list {
@@ -131,22 +133,22 @@
   }
 }
 .nav-link {
-  font-family: $font-family-primary;
+  // font-family: $font-family-primary;
   font-weight: 500;
   font-size: 14px;
-  color: $color-black;
+  // color: $color-black;
   text-decoration: none;
   transition: all 300ms ease;
 
   &:hover {
-    color: $color-heading;
+    // color: $color-heading;
     transform: scale(0.94);
     text-decoration: underline;
   }
 
   @include media(desktop) {
     font-size: 20px;
-    color: $color-white;
+    // color: $color-white;
   }
 }
 .hidden {
