--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,58 +3,79 @@
     <a href="./index.html" class="logo-link">
       <picture>
         <source srcset="/images/logo-desktop.png" media="(min-width: 768px)" />
+        <source srcset="/images/logo-phone.png" media="(min-width: 320px)" />
         <img src="/images/logo-phone.png" alt="logo" class="logo-img" />
       </picture>
     </a>
 
-    <button class="burger-btn" type="button">
-      <svg
-        width="36"
-        height="36"
-        viewBox="0 0 40 40"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
+    <button class="burger-btn" type="button" aria-label="Menu">
+      <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
         <path
-          d="M5 10H35M5 20H35M5 30H35"
+          d="M3 12H21M3 6H21M3 18H21"
+          stroke="white"
           stroke-width="2"
           stroke-linecap="round"
-          stroke-linejoin="round"
         />
       </svg>
     </button>
 
     <nav class="header-nav">
-      <button class="burger-menu-btn-close" type="button">
-        <svg
-          width="36"
-          height="36"
-          viewBox="0 0 40 40"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M10.6663 31.6667L8.33301 29.3333L17.6663 20L8.33301 10.6667L10.6663 8.33333L19.9997 17.6667L29.333 8.33333L31.6663 10.6667L22.333 20L31.6663 29.3333L29.333 31.6667L19.9997 22.3333L10.6663 31.6667Z"
+      <div class="nav-header">
+        <a href="./index.html" class="logo-link-mobile">
+          <img
+            src="/images/logo-phone.png"
+            alt="logo"
+            class="logo-img-mobile"
           />
-        </svg>
-      </button>
+        </a>
+        <button class="burger-btn-close" type="button" aria-label="Close">
+          <svg width="32" height="32" viewBox="0 0 24 24" fill="none">
+            <path
+              d="M18 6L6 18M6 6L18 18"
+              stroke="#8B5CF6"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+        </button>
+      </div>
+
       <ul class="nav-list">
         <li class="nav-item">
+          <span class="nav-number">01 /</span>
           <a href="#goal" class="nav-link">Goal</a>
         </li>
         <li class="nav-item">
+          <span class="nav-number">02 / </span>
           <a href="#advantages" class="nav-link">Advantages</a>
         </li>
         <li class="nav-item">
+          <span class="nav-number">03 /</span>
           <a href="#commissions" class="nav-link">Commissions</a>
         </li>
         <li class="nav-item">
+          <span class="nav-number">04 /</span>
           <a href="#testimonials" class="nav-link">Testimonials</a>
         </li>
         <li class="nav-item">
+          <span class="nav-number">05 /</span>
           <a href="#faq" class="nav-link">FAQ</a>
         </li>
       </ul>
+
+      <div class="burger-img">
+        <img src="/images/burger-img.png" alt="decorative smoke" />
+      </div>
+
+      <div class="header-actions-mobile">
+        <button class="btn-login">Log in</button>
+        <button class="btn-register">Registration</button>
+      </div>
     </nav>
+
+    <div class="header-actions-desktop">
+      <button class="btn-login">Log in</button>
+      <button class="btn-register">Registration</button>
+    </div>
   </div>
 </section>
