create hero end goal

--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,5 +1,6 @@
 $font-family: "Inter", sans-serif;
-$second-family: "Oswald", sans-serif;
+// $second-family: "Oswald", sans-serif;
+$second-family: "Roboto Condensed", sans-serif;
 $third-family: "Roboto", sans-serif;
 
 // Основні кольори
