--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,17 +1,18 @@
 <section id="hero" class="hero-section">
-  <div class="hero-bg">
-    <div class="hero-container">
+  <div class="hero-container">
+    <div class="wrapper-hero-text">
       <h1 class="hero-title">TwoCards Partners</h1>
       <p class="hero-text">Turn your traffic into profit</p>
-      <button class="btn-start" type="button">Let’s start</button>
-
+      <button class="btn-start" type="button">Let's start</button>
+    </div>
+    <div class="hero-img-wrap">
       <picture>
-        <source srcset="../images/hero-img.png" media="(min-width: 1110px)" />
-        <source
-          srcset="../images/hero-img-phone-two.png"
-          media="(min-width: 320px)"
+        <source srcset="/images/hero-img.png" media="(min-width: 1000px)" />
+        <img
+          src="/images/hero-img-phone-two.png"
+          alt="Casino characters"
+          class="hero-img"
         />
-        <img src="../images/hero-img-phone-two.png" alt="" class="hero-img" />
       </picture>
     </div>
   </div>
