--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -10,10 +10,15 @@ body {
   font-size: 16px;
 }
 .container {
-  width: 375px;
+  min-width: 320px;
+  max-width: 1110px;
+  width: 100%;
   margin: 0 auto;
+  padding: 32px 16px;
+
   @include media(desktop) {
-    width: 1110px;
+    // min-width: 1110px;
+    padding: 100px 0;
   }
 }
 .title {
@@ -27,11 +32,18 @@ body {
     font-size: 56px;
   }
 }
-// .text {
-//   font-weight: 400;
-//   font-size: 14px;
-//   color: $color-white;
-//   @include media(desktop) {
-//     font-size: 18px;
-//   }
-// }
+.text {
+  font-family: $font-family;
+  color: $color-white;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.4;
+
+  span {
+    font-weight: 800;
+  }
+
+  @include media(desktop) {
+    font-size: 20px;
+  }
+}
