create advantages section

--- a/src/partials/our-goal.html
+++ b/src/partials/our-goal.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="goal-container">
       <div class="goal-wrapper-text">
-        <h2 class="title">Our Goal</h2>
+        <h2 class="title goal-title">Our Goal</h2>
         <p class="text">
           Is to build long-term,<span>win-win</span> partnerships based on
           <span>trust</span>, transparency, and mutual <span>growth</span>.
