--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -9,6 +9,7 @@ body {
   line-height: 1.4;
   font-size: 16px;
 }
+
 .container {
   min-width: 320px;
   max-width: 1110px;
@@ -21,6 +22,7 @@ body {
     padding: 100px 0;
   }
 }
+
 .title {
   font-family: $second-family;
   font-weight: 600;
@@ -28,10 +30,14 @@ body {
   line-height: 1.2;
   color: $color-white;
   text-align: center;
+  margin-bottom: 24px;
+
   @include media(desktop) {
     font-size: 56px;
+    margin-bottom: 46px;
   }
 }
+
 .text {
   font-family: $font-family;
   color: $color-white;
