--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -18,7 +18,6 @@ body {
   padding: 32px 16px;
 
   @include media(desktop) {
-    // min-width: 1110px;
     padding: 100px 0;
   }
 }
@@ -35,6 +34,20 @@ body {
   @include media(desktop) {
     font-size: 56px;
     margin-bottom: 46px;
+  }
+}
+
+.subtitle {
+  font-family: $second-family;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  color: $color-white;
+  margin-bottom: 12px;
+
+  @include media(desktop) {
+    font-size: 28px;
+    margin-bottom: 16px;
   }
 }
 
