--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,21 +1,18 @@
 @use "./common/index" as *;
 
 .footer {
-  padding: 32px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
-
-  @include media(desktop) {
-    padding: 40px 0;
-  }
 }
 
 .footer-container {
+  padding: 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
 
   @include media(desktop) {
+    padding: 20px;
     flex-direction: row;
     justify-content: space-between;
     gap: 40px;
@@ -25,12 +22,13 @@
 .footer-copyright {
   font-family: $font-family;
   font-weight: 400;
-  font-size: 14px;
-  color: rgba(255, 255, 255, 0.6);
+  font-size: 12px;
+  line-height: 1.4;
   text-align: center;
+  color: $color-white;
 
   @include media(desktop) {
-    font-size: 16px;
+    font-size: 14px;
     text-align: left;
   }
 }
@@ -46,18 +44,16 @@
 
 .footer-link {
   font-family: $font-family;
-  font-weight: 600;
-  font-size: 14px;
+  font-weight: 800;
+  font-size: 15px;
+  line-height: 1.2;
+
   color: #a855f7;
   text-decoration: none;
   transition: color 0.3s ease;
 
   &:hover {
     color: #c084fc;
-  }
-
-  @include media(desktop) {
-    font-size: 16px;
   }
 }
 
@@ -75,11 +71,8 @@
   font-family: $font-family;
   font-weight: 400;
   font-size: 14px;
-  color: rgba(255, 255, 255, 0.6);
-
-  @include media(desktop) {
-    font-size: 16px;
-  }
+  line-height: 1.4;
+  color: $color-white;
 }
 
 .footer-socials {
@@ -92,16 +85,25 @@
 }
 
 .footer-social-link {
-  width: 40px;
-  height: 40px;
+  width: 32px;
+  height: 32px;
+
   display: flex;
   align-items: center;
   justify-content: center;
+
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 100px;
+  box-shadow: 0 1px 2px 0 rgba(10, 13, 18, 0.05),
+    inset 0 -2px 0 0 rgba(10, 13, 18, 0.05),
+    inset 0 0 0 1px rgba(10, 13, 18, 0.18);
+  background: #1c1f22;
+
   transition: opacity 0.3s ease;
 
   svg {
-    width: 24px;
-    height: 24px;
+    width: 20px;
+    height: 20px;
   }
 
   &:hover {
@@ -109,12 +111,12 @@
   }
 
   @include media(desktop) {
-    width: 44px;
-    height: 44px;
+    width: 40px;
+    height: 40px;
 
     svg {
-      width: 28px;
-      height: 28px;
+      width: 24px;
+      height: 24px;
     }
   }
 }
