create coockie end update faq section

--- a/src/partials/contact-us.html
+++ b/src/partials/contact-us.html
@@ -4,7 +4,7 @@
       <div class="contact-img-wrap">
         <picture>
           <source
-            srcset="../images/contact-img.png"
+            srcset="/images/contact-img.png"
             media="(min-width: 1000px)"
           />
           <img
@@ -126,7 +126,13 @@
         </div>
 
         <div class="socials">
-          <a href="#" class="social-link">
+          <a
+            href="https://web.telegram.org"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Telegram"
+            class="social-link"
+          >
             <svg
               width="24"
               height="24"
@@ -140,7 +146,13 @@
               />
             </svg>
           </a>
-          <a href="#" class="social-link">
+          <a
+            href="https://myaccount.google.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Gmail"
+            class="social-link"
+          >
             <svg
               width="24"
               height="24"
@@ -154,7 +166,13 @@
               />
             </svg>
           </a>
-          <a href="#" class="social-link">
+          <a
+            href="https://twitter.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Twitter"
+            class="social-link"
+          >
             <svg
               width="21"
               height="19"
