--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -33,7 +33,7 @@
         </div>
       </li>
 
-      <li class="faq-item active">
+      <li class="faq-item">
         <button class="faq-question">
           <span class="faq-question-text">What is the minimum payout?</span>
           <span class="faq-icon">
@@ -84,6 +84,6 @@
       </li>
     </ul>
 
-    <button class="faq-button" type="button">More...</button>
+    <a href="../faq-page.html" class="faq-button">More...</a>
   </div>
 </section>
