--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,13 @@
     <div class="footer-socials-wrapper">
       <span class="footer-socials-text">Social links:</span>
       <div class="footer-socials">
-        <a href="#" class="footer-social-link">
+        <a
+          href="https://t.me"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Telegram"
+          class="footer-social-link"
+        >
           <svg
             width="20"
             height="20"
@@ -26,7 +32,13 @@
             />
           </svg>
         </a>
-        <a href="#" class="footer-social-link">
+        <a
+          href="https://www.linkedin.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="LinkedIn"
+          class="footer-social-link"
+        >
           <svg
             width="20"
             height="20"
@@ -48,7 +60,13 @@
             />
           </svg>
         </a>
-        <a href="#" class="footer-social-link">
+        <a
+          href="https://twitter.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Twitter"
+          class="footer-social-link"
+        >
           <svg
             width="17"
             height="15"
