--- a/src/partials/our-advantages.html
+++ b/src/partials/our-advantages.html
@@ -111,7 +111,7 @@
           <p class="advantages-footer-subtext">
             Trusted by 1000+ affiliates worldwide 🌍
           </p>
-          <button class="btn-contact" type="button">Contact Us</button>
+          <a href="#contact" class="btn-contact">Contact Us</a>
         </li>
       </ul>
     </div>
